# ChangeLog for dev-perl/Sub-Identify
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Identify/ChangeLog,v 1.8 2011/09/04 11:23:39 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Sub-Identify-0.04.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Sub-Identify-0.40.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Sub-Identify-0.40.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org> +Sub-Identify-0.40.0.ebuild:
  Change version scheme

  22 Sep 2010; Fabian Groffen <grobian@gentoo.org> Sub-Identify-0.04.ebuild:
  Marked ~ppc-macos ~x86-solaris, bug #337974

  27 Jun 2010; <nixnut@gentoo.org> Sub-Identify-0.04.ebuild:
  ppc stable #323529

  02 Dec 2009; Torsten Veller <tove@gentoo.org> Sub-Identify-0.04.ebuild:
  Stable on amd64 and x86 (#293622)

  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> Sub-Identify-0.04.ebuild:
  Keywording for ppc, bug 283244

*Sub-Identify-0.04 (14 Jan 2009)

  14 Jan 2009; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Sub-Identify-0.04.ebuild:
  Initial version. From the perl overlay
