@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST Sub-Identify-0.04.tar.gz 42502 RMD160 e6351b5c2ef39d7136e239adc444661e3122d148 SHA1 08a1de8fc1dedf41d89f6b504d82e520c2018eff SHA256 be4bb6b894af405e8031139fdd30cd34e7389cde13602d4b80b040b2ea6ce499
-EBUILD Sub-Identify-0.40.0.ebuild 493 RMD160 84e78f5a3b5478e91e35be53a0bf8c2bb3a42dc8 SHA1 fc95eacf044675f74d4bc0d07ba9072e13396e8b SHA256 0ec3b33fc4d26254e6893faaec5947d12d9d4bff0ac2bf476d4355ee202c8e3d
-MISC ChangeLog 1169 RMD160 2732a9423bb55aee008a08385249d5ccdd42f1ec SHA1 e7306384fe6a0506fd2b6eb5bf1c6d37bdbe0ac5 SHA256 9715499425286a2b083cf4f4489f02e02a05cbb96ff77dd635c33ab536ed1b76
+EBUILD Sub-Identify-0.40.0.ebuild 507 RMD160 7ca417171325ad0305929a115e52b4a1751af07a SHA1 afac6715a7bef2842296c317dd20835a126163b1 SHA256 77da583dbc1577dcfc19f1b446c7c1fdd1e72cab1f7931f071b46f4d2adc8a73
+MISC ChangeLog 1272 RMD160 05558cebea4112a9a7735833ab095fa7df03d366 SHA1 e977c1c03b9180eb28a726bb41a6192fa9fba5fc SHA256 01fdb946a0324fa87f7e1e8f971af04e92f083cce512309e4a87fa79272ea6c8
 MISC metadata.xml 238 RMD160 59ed538f07420ff2802f4745a578722ca8006d14 SHA1 32d9be19411e120642b5ba072c6c28fe74a68fd1 SHA256 9fb6836304f5598eee2f9767cf8e56909b1efdfbe2105d75a42adaaa26f9cbec
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.18 (Darwin)
 
-iEYEAREIAAYFAk5jYEgACgkQV3J2n04EauzWiACffU2U0nY4IMLON5Yl1GPqbxxw
-ubwAoMWKD5AIABfYkZTyGLwBuuM34lcc
-=QiDg
+iEYEARECAAYFAk9Pt7QACgkQX3X2B8XHTokoKQCfQltKLfhowCT+ZdaL6bS38Eid
+xwAAn2oTdWwBG7juBTIzue3VBLZKBBzK
+=ikJQ
 -----END PGP SIGNATURE-----
