@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Sub-Identify
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Identify/ChangeLog,v 1.8 2011/09/04 11:23:39 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Identify/ChangeLog,v 1.9 2012/03/01 17:53:50 grobian Exp $
+
+  01 Mar 2012; Fabian Groffen <grobian@gentoo.org> Sub-Identify-0.40.0.ebuild:
+  Marked ~x64-macos
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -Sub-Identify-0.04.ebuild:
   Cleanup
